--- a/views/help/contact.hbs
+++ b/views/help/contact.hbs
@@ -1,6 +1,6 @@
 <div class="contact-form">
   <p>Wen möchtest du Kontaktieren?</p>
-  <fieldset id="message_target">
+  <fieldset class="switch_wrapper" id="message_target">
     <div class="switch">
       <input type="radio" id="admin" name="message_target" value="admin" checked>
       <label for="admin" tabindex="0" role="button">Admin</label>
@@ -9,14 +9,15 @@
     </div>
   </fieldset>
 
-  <div class="admin_form">
+  <form class="admin_form" action="/helpdesk" method="post">
     {{> "help/forms/form_admin"}}
-  </div>
+    <button type="submit">Absenden</button>
+  </form>
 
   <div class="team_form hidden">
-    <p> Danke für dein Feedback, es wird direkt an das Entwicklungsteam der {{theme_short_title}} gesendet. Bitte achte darauf, keine passwörter und andere sensible Daten mitzusenden.</p>
+    <p>Danke für dein Feedback, es wird direkt an das Entwicklungsteam der {{theme_short_title}} gesendet. Bitte achte darauf, keine passwörter und andere sensible Daten mitzusenden.</p>
     <p>Welche Art von Feedback möchtest du uns senden?</p>
-    <fieldset id="message_type">
+    <fieldset class="switch_wrapper" id="message_type">
       <div class="switch">
         <input type="radio" id="wish" name="message_type" value="wish" checked>
         <label for="wish" tabindex="0" role="button">Wunsch</label>
@@ -25,11 +26,13 @@
       </div>
     </fieldset>
 
-    <div class="wish_form">
+    <form class="wish_form" action="/helpdesk" method="post">
       {{> "help/forms/form_wish"}}
-    </div>
-    <div class="bug_form hidden">
+      <button type="submit">Absenden</button>
+    </form>
+    <form class="bug_form hidden" action="/helpdesk" method="post">
       {{> "help/forms/form_bug"}}
-    </div>
+      <button type="submit">Absenden</button>
+    </form>
   </div>
 </div>
