--- a/views/help/forms/form_wish.hbs
+++ b/views/help/forms/form_wish.hbs
@@ -1,27 +1,31 @@
-<form>
-  <div class="form-group">
-    <label for="email">Als...</label>
-    <input id="email" class="form-control" type="email" name="email" placeholder="user@schul-cloud.org">
-  </div>
-  <div class="form-group">
-    <label for="comment">möchte ich...</label>
-    <textarea class="form-control" rows="5" id="comment" required></textarea>
-  </div>
-  <div class="form-group">
-    <label for="comment">um...</label>
-    <textarea class="form-control" rows="5" id="comment" required></textarea>
-  </div>
-  <div class="form-group">
-    <label for="comment">Akzeptanzkriterien (optional)</label>
-    <textarea class="form-control" rows="5" id="comment" required></textarea>
-  </div>
-  <div class="form-group">
-    <label for="sel1">Bereich auswählen (optional)</label>
-    <select class="form-control" id="sel1">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-    </select>
-  </div>
-</form>
+<input type="hidden" name="type" value="contactHPI">
+<label class="form-group">
+  <span class="control-label">Als...</span>
+  <input type="text" name="role" id="role" placeholder="z.B. Schüler, Lehrer, Administrator, Hausmeister usw." class="form-control" required>
+</label>
+<label class="form-group">
+  <span class="control-label">möchte ich ...</span>
+  <textarea class="form-control" id="desire" cols="50" name="desire" rows="6" required placeholder="z.B. eine im System angelegte Schüleraufgabe leicht auffinden und ändern können"></textarea>
+</label>
+<label class="form-group">
+  <span class="control-label">um ...</span>
+  <textarea class="form-control" id="benefit" cols="50" name="benefit" rows="6" placeholder="z.B. sie zu aktualisieren" required></textarea>
+</label>
+<label class="form-group">
+    <span class="control-label optional">Akzeptanzkriterien</span>
+    <textarea class="form-control" id="acceptance_criteria" cols="50" name="acceptance_criteria" rows="6" placeholder="z.B. Nach der Systemanmeldung gelange ich in maximal zwei Schritten zum Stundenkontext, kann die Schüleraufgabe dort mit einem Klick bearbeiten und die SchülerInnen bei Bedarf automatisch über die Änderung informieren."></textarea>
+</label>
+<label class="form-group">
+  <span class="control-label optional">Bereich wählen</span>
+  <select name="category" id="category" placeholder="Bereich wählen (optional)">
+      <option value="dashboard">Übersicht</option>
+      <option value="courses">Kurse</option>
+      <option value="classes">Klassen</option>
+      <option value="calendar">Termine</option>
+      <option value="homework">Aufgaben</option>
+      <option value="files">Meine Dateien</option>
+      <option value="content">Materialien</option>
+      <option value="administration">Verwaltung</option>
+      <option value="other">Sonstiges</option>
+  </select>
+</label>
