pending invitations, here we go

--- a/views/teams/members.hbs
+++ b/views/teams/members.hbs
@@ -43,7 +43,7 @@
                 </div>
             </div>
 
-            {{!-- {{#ifCond (arrayLength bodyInvitations) '>' 0}}
+            {{#ifCond (arrayLength bodyInvitations) '>' 0}}
                 <h4 style="margin-top: 2rem" class="padding-top">Ausstehende Einladungen</h4>
                 <div class="container-fluid">
                     <div class="row">
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                 </div>
-            {{/ifCond}} --}}
+            {{/ifCond}}
 
             <h4 class="padding-top">
                 {{arrayLength body}} Teilnehmer
