Some first empty state for course -> groups, aligned styling

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -126,7 +126,7 @@
     display: none;
   }
 }
-.course-task-header {
+.course-tasks-header, .course-groups-header {
   padding: 0.5rem 0.75rem;
   color: $fontColor;
 }
