--- a/views/courses/components/tasks.hbs
+++ b/views/courses/components/tasks.hbs
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12 container">
     {{#ifneq 0 (arrayLength homeworks)}}
-      <div class="course-task-header">
+      <div class="course-tasks-header">
         <i class="fa fa-eye"></i>
         Gestellte Aufgaben
         <small>({{arrayLength ../homeworks}} Aufgabe{{#ifneq 1 (arrayLength ../homeworks)}}n{{/ifneq}})</small>
@@ -39,7 +39,7 @@
       {{/userHasPermission}}
       {{#ifneq 0 (arrayLength myhomeworks)}}
         <a data-toggle="collapse" class="collapse-toggle" href="#myhomeworks">
-          <div class="course-task-header">
+          <div class="course-tasks-header">
             <small title="Private Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
             <i class="fa fa-eye-slash"></i>
             Private Aufgaben
