--- a/views/courses/components/groups.hbs
+++ b/views/courses/components/groups.hbs
@@ -1,35 +1,38 @@
 <div class="row">
   <div class="col-sm-12">
-    <div class="course-groups-header">
-   
-      {{#userHasPermission "COURSE_EDIT" }}Schülergruppen{{else}}Meine Schülergruppen{{/userHasPermission}}
-      <small>
-        {{#ifneq 0 (arrayLength courseGroups)}}
-          ({{arrayLength courseGroups}} Gruppe{{#ifneq 1 (arrayLength courseGroups)}}n{{/ifneq}})
-        {{else}}
-          (Noch keine Gruppen)
-        {{/ifneq}}
-      </small>
-      
+    {{#ifneq 0 (arrayLength courseGroups)}}
+    <div class="course-groups-header"></div>
+    {{#userHasPermission "COURSE_EDIT" }}Schülergruppen{{else}}Meine Schülergruppen{{/userHasPermission}}
+    <small>
+      ({{arrayLength courseGroups}} Gruppe{{#ifneq 1 (arrayLength courseGroups)}}n{{/ifneq}})
+    </small>
+  </div>
+  {{else}}
 
-    </div>  
-    <div id="courseGroups" class="container-fluid">
-      <ol class="courseGroup">
-        <div class="row">
-          {{#each courseGroups}}
-            <div class="col-sm-6 col-xs-12">
-              {{> 'courses/components/courseGroup-card'}}
-            </div>
-          {{/each}}
+  <p class="text-muted list-group-item list-group-item-action flex-column align-items-start">
+    <span>Noch keine Schülergruppen</span>
+  </p>
+
+  {{/ifneq}}
+  {{#ifneq 0 (arrayLength courseGroups)}}
+  <div id="courseGroups" class="container-fluid">
+    <ol class="courseGroup">
+      <div class="row">
+        {{#each courseGroups}}
+        <div class="col-sm-6 col-xs-12">
+          {{> 'courses/components/courseGroup-card'}}
         </div>
-      </ol>
-    </div>
+        {{/each}}
+      </div>
+    </ol>
   </div>
-  <div class="col-sm-12">
-    {{#userHasPermission "COURSEGROUP_CREATE"}}
-      <a href="/courses/{{../id}}/groups/add" class="btn btn-primary w-100 pull-right" title="Gruppe hinzufügen">
-        <i class="fa fa-plus" aria-hidden="true"></i><span> Schülergruppe hinzufügen</span>
-      </a>
-    {{/userHasPermission}}
-  </div>
+  {{/ifneq}}
+  {{#userHasPermission "COURSEGROUP_CREATE"}}
+  <a href="/courses/{{../id}}/groups/add" class="btn btn-primary w-100 pull-right" title="Gruppe hinzufügen">
+    <i class="fa fa-plus" aria-hidden="true"></i><span> Schülergruppe hinzufügen</span>
+  </a>
+  {{/userHasPermission}}
+</div>
+<div class="col-sm-12">
+
 </div>
