--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -55,7 +55,7 @@
                 href="{{this.url}}"
                 target="_blank"
                 data="archive=open"
-                data-toggle="tooltip" title="Verschiebe Aufgabe zwischen Übersichtsseite und Archiv"
+                data-toggle="tooltip" title="Verschiebe Aufgabe aus Archiv in die Übersichtsseite"
                 alt-text="<i class='fa fa-archive'></i> Archivieren">
                     <i class='fa fa-mail-reply'></i> Wiederherstellen
             </a>
@@ -66,7 +66,7 @@
                 href="{{this.url}}"
                 target="_blank"
                 data="archive=done"
-                data-toggle="tooltip" title="Verschiebe Aufgabe zwischen Übersichtsseite und Archiv"
+                data-toggle="tooltip" title="Verschiebe Aufgabe von Übersichtsseite ins Archiv"
                 alt-text="<i class='fa fa-mail-reply'></i> Wiederherstellen">
                     <i class='fa fa-archive'></i> Archivieren
             </a>
