added relative dates to takss display in course

--- a/views/homework/components/course_overview_card_template.hbs
+++ b/views/homework/components/course_overview_card_template.hbs
@@ -1,8 +1,10 @@
 <li class="card assignment">
-    <a href="{{this.url}}" alt="Details der Aufgabe: '{{this.name}}'">
+    <a href="{{this.url}}" alt="Details der Aufgabe: '{{this.name}}'">   
         <div class="dates">
-            {{timeToString availableDate}}<br/>
-                bis {{timeToString dueDate}}
+            {{#if dueDate}}
+              Fällig {{timeFromNow dueDate}}
+            {{/if}}
+            <i class="fa fa-info" title="{{timeToString availableDate}} bis {{timeToString dueDate}}"></i>
         </div>
         <h5 class="title">{{{stripOnlyScript this.name}}}</h5>
         <div class="description">
