Human readable texts

--- a/views/homework/components/course_overview_card_template.hbs
+++ b/views/homework/components/course_overview_card_template.hbs
@@ -1,10 +1,14 @@
 <li class="card assignment">
     <a href="{{this.url}}" alt="Details der Aufgabe: '{{this.name}}'">   
         <div class="dates">
+            {{#if availableDate}}
+              Veröffentlicht {{timeFromNow availableDate}}<br />
+            {{/if}}\
             {{#if dueDate}}
+            {{!-- TODO  Color by distance --}}
               Fällig {{timeFromNow dueDate}}
             {{/if}}
-            <i class="fa fa-info" title="{{timeToString availableDate}} bis {{timeToString dueDate}}"></i>
+            &nbsp;<i class="fa fa-info" title="{{timeToString availableDate}} bis {{timeToString dueDate}}"></i>
         </div>
         <h5 class="title">{{{stripOnlyScript this.name}}}</h5>
         <div class="description">
