--- a/views/help/confluence.hbs
+++ b/views/help/confluence.hbs
@@ -12,6 +12,6 @@
     {{#content "page"}}
         {{> "help/search"}}
 
-        <iframe class="full" src="https://docs.schul-cloud.org/pages/viewpage.action?pageId={{articleId}}&frameable=true" frameborder="0"></iframe>
+        <iframe class="full" src="https://docs.schul-cloud.org/pages/viewpage.action?pageId={{articleId}}&frameable=true" frameborder="0" scrolling="no"></iframe>
     {{/content}}
 {{/extend}}
