some refactoring & forms are working now

--- a/views/help/forms/form_admin.hbs
+++ b/views/help/forms/form_admin.hbs
@@ -1,16 +1,17 @@
-<input type="hidden" name="type" value="contactAdmin">
+<input type="hidden" name="target" value="Admin">
+
 <p>Hier erreichst du den Administrator deiner Schule. Er kann dir z.B. bei Login-Problemen helfen und wird per E-Mail über deinen Kontaktgesuch informiert.</p>
 <label class="form-group">
     <span class="control-label">Kurzbeschreibung des Problems</span>
-    <input type="text" name="title" placeholder="Kurzbeschreibung des Problems" class="form-control" required>
+    <input type="text" name="subject" placeholder="Kurzbeschreibung des Problems" class="form-control" required>
 </label>
 <label class="form-group">
     <span class="control-label">IST-Zustand: Was geschieht zur Zeit, nachdem ich welche Schritte durchgeführt habe?</span>
-    <textarea class="form-control" cols="50" name="hasHappened" rows="6" required></textarea>
+    <textarea class="form-control" cols="50" name="currentState" rows="6" required></textarea>
 </label>
 <label class="form-group">
     <span class="control-label" for="supposedToHappen">SOLL-Zustand: Was sollte stattdessen geschehen?</span>
-    <textarea class="form-control" cols="50" name="supposedToHappen" rows="6" required></textarea>
+    <textarea class="form-control" cols="50" name="targetState" rows="6" required></textarea>
 </label>
 <label class="form-group">
   <span class="control-label optional">Kategorie wählen</span>
