--- a/views/help/search.hbs
+++ b/views/help/search.hbs
@@ -1,4 +1,4 @@
-<div class="live-search">
+<div class="live-search {{class}}">
     <template class="result">
         <a href="${link}" class="${class}">
             <div>
