--- a/views/help/forms/form_bug.hbs
+++ b/views/help/forms/form_bug.hbs
@@ -1,19 +1,21 @@
-<input type="hidden" name="type" value="contactHPI">
+<input type="hidden" name="target" value="HPI">
+<input type="hidden" name="type" value="wish">
+
 <label class="form-group">
-  <label class="control-label" for="title">Kurzbeschreibung des Problems</label>
-  <input type="text" name="title" id="problemTitle" placeholder="Kurzbeschreibung des Problems" class="form-control">
+  <label class="control-label">Kurzbeschreibung des Problems</label>
+  <input class="form-control" type="text" name="title" placeholder="Kurzbeschreibung des Problems" required>
 </label>
 <label class="form-group">
-  <label class="control-label" for="hasHappened">IST-Zustand: Was geschieht zur Zeit, nachdem ich welche Schritte durchgeführt habe?</label>
-  <textarea class="form-control" id="hasHappened" cols="50" name="hasHappened" rows="6"></textarea>
+  <label class="control-label">IST-Zustand: Was geschieht zur Zeit, nachdem ich welche Schritte durchgeführt habe?</label>
+  <textarea class="form-control" cols="50" name="currentState" rows="6" required></textarea>
 </label>
 <label class="form-group">
-  <label class="control-label" for="supposedToHappen">SOLL-Zustand: Was sollte stattdessen geschehen?</label>
-  <textarea class="form-control" id="supposedToHappen" cols="50" name="supposedToHappen" rows="6"></textarea>
+  <label class="control-label">SOLL-Zustand: Was sollte stattdessen geschehen?</label>
+  <textarea class="form-control" cols="50" name="targetState" rows="6" required></textarea>
 </label>
 <label class="form-group">
   <span class="control-label optional">Bereich wählen</span>
-  <select name="category" id="category" placeholder="Bereich wählen (optional)">
+  <select name="category" placeholder="Bereich wählen (optional)">
     <option value="dashboard">Übersicht</option>
     <option value="courses">Kurse</option>
     <option value="classes">Klassen</option>
