disabled first steps

--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -27,7 +27,7 @@
             {{/content}}
         {{/embed}}
 
-        {{#if true}}
+        {{#if false}}
         {{#embed "help/component-card" title="Erste Schritte" icon="fa-child" class="first-steps-card" id="Erste_Schritte"}}
             {{#content "card-body"}}
                 {{> "help/icon-link-group" links=firstStepsItems link-class="col-sm-3"}}
