Adjust code to library changes

--- a/views/planner/myClasses.hbs
+++ b/views/planner/myClasses.hbs
@@ -11,7 +11,7 @@
 
 {{#content "page"}}
 <section class="section-course-edit">
-    <div id="react-root" data-schoolYear="{{schoolYear}}" data-eventData="{{eventData}}" data-allClassTopics="{{allClassTopics}}"
+    <div id="react-root" data-schoolyeardata="{{schoolYearData}}" data-eventData="{{eventData}}" data-allClassTopics="{{allClassTopics}}"
         data-allTopicTemplates="{{allTopicTemplates}}"></div>
 </section>
 {{/content}}
