--- a/views/planner/newTemplate.hbs
+++ b/views/planner/newTemplate.hbs
@@ -11,7 +11,7 @@
 
 {{#content "page"}}
 <section class="section-course-edit">
-    <div id="react-root" data-id="{{id}}" data-initialValues="{{initialValues}}"></div>
+    <div id="react-root" data-initialValues="{{initialValues}}"></div>
 </section>
 {{/content}}
 {{/extend}}
