--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -18,7 +18,7 @@
 
                                     <div class="form-group">
                                         <label>Name der Schule</label>
-                                        <input value="{{../school.name}}" type="text" class="form-control" name="name" placeholder="Einhorn Gymnasium" required />
+                                        <input value="{{../school.name}}" type="text" class="form-control" name="name" placeholder="Einhorn Gymnasium" required {{#if ../schoolUsesLdap}} readonly {{/if}} />
                                     </div>
 
                                     {{#if ../school.fileStorageType}}
