--- a/views/teams/overview.hbs
+++ b/views/teams/overview.hbs
@@ -1,31 +1,38 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "scripts" mode="append"}}
+    <script type="text/javascript" defer src="/scripts/teamOverview.js"></script>
     {{/content}}
     {{#content "styles" mode="append"}}
     {{/content}}
 
     {{#content "page"}}
         <section class="section-courses">
-                {{#if courses}}
-                    {{> 'dashboard/components/card_section' section-id="courses" title="" content=courses link-text="Öffnen" additionalInfoName="memberCount"}}
-                {{else}}
-                    <div class="col-xs-12">
-                        <p class="text-muted text-center">
-                            <span>Keine Teams.</span>
-                        </p>
-                    </div>
-                {{/if}}
-
-                {{#userHasPermission "COURSE_EDIT"}}
+            {{#if teams}}
+                {{> 'dashboard/components/card_section' section-id="teams" title="" content=teams link-text="Öffnen" additionalInfoName="memberCount"}}
+            {{else}}
                 <div class="col-xs-12">
-                    <div class="row padding-top">
-                        <div class="col-sm-12">
-                            <a href="/teams/add" class="btn btn-add btn-primary">Team anlegen</a>
-                        </div>
+                    <p class="text-muted text-center">
+                        <span>Keine Teams.</span>
+                    </p>
+                </div>
+            {{/if}}
+
+            
+            {{#if teamInvitations}}
+                <h2>Einladungen</h2>
+                {{> 'dashboard/components/card_section' section-id="teamInvitations" title="" content=teamInvitations link-text="Akzeptieren"}}
+            {{/if}}
+
+            {{#userHasPermission "COURSE_EDIT"}}
+            <div class="col-xs-12">
+                <div class="row padding-top">
+                    <div class="col-sm-12">
+                        <a href="/teams/add" class="btn btn-add btn-primary">Team anlegen</a>
                     </div>
                 </div>
-                {{/userHasPermission}}
+            </div>
+            {{/userHasPermission}}
 
             {{#embed "lib/components/modal" class="member-modal"}}
                 {{#content "body"}}
