fix for the problem. why is unknown

--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -11,7 +11,7 @@
                 <circular-progress class="meinel-progress" primarycolor="#b10438" secondarycolor="#009688" accentcolor="lightgrey"
                     data="{{this.stats.submissionPercentage}}"
                     {{#if this.stats.gradePercentage}}secdata="{{this.stats.gradePercentage}}" {{/if}}
-                    width="70" height="70"
+                    width="70" height="70" style="width: 70px; height: 70px;"
                     data-toggle="tooltip" data-placement="left" data-html="true" 
                     data-original-title="
                         Abgegeben: {{this.stats.submissionCount}}</br>
