--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -25,40 +25,42 @@
         </div>
         <div class="navtooltips"></div>
         <aside class="nav-sidebar hide-inline">
-            <ul class="sidebar-list">
-                <li>
-                    <a class="sc-branding" href="/">
-                        <div class="cloud-logo"></div>
-                        <div class="sc-title"><span>{{theme.short_title}}</span></div>
-                    </a>
-                </li>
-                {{#each sidebarItems}}
-                    <li data-step={{this.introNumber}} data-intro="{{this.introText}}">
-                        <a class="{{this.class}}" href="{{this.link}}"
-                                title="{{this.name}}">
-                            <i class="fa fa-{{this.icon}}" aria-hidden="true"></i>
-                            <span class="link-name">{{this.name}}</span>
+            <nav>
+                <ul class="sidebar-list">
+                    <li>
+                        <a class="sc-branding" href="/">
+                            <div class="cloud-logo"></div>
+                            <div class="sc-title"><span>{{theme.short_title}}</span></div>
                         </a>
-
-                        {{#if this.childActive}}
-                            {{#if this.children}}
-                                <ul class="subitems">
-                                    {{#each this.children}}
-                                        <li>
-                                            <a class="subitem {{this.class}}" href="{{this.link}}"
-                                                title="{{this.name}}">
-                                                <i class="fa fa-{{this.icon}}" aria-hidden="true"></i>
-                                                <span class="link-name">{{this.name}}</span>
-                                            </a>
-                                        </li>
-                                    {{/each}}
-                                </ul>
-                            {{/if}}
-                        {{/if}}
-
                     </li>
-                {{/each}}
-            </ul>
+                    {{#each sidebarItems}}
+                        <li data-step={{this.introNumber}} data-intro="{{this.introText}}">
+                            <a class="{{this.class}}" href="{{this.link}}"
+                                    title="{{this.name}}">
+                                <i class="fa fa-{{this.icon}}" aria-hidden="true"></i>
+                                <span class="link-name">{{this.name}}</span>
+                            </a>
+
+                            {{#if this.childActive}}
+                                {{#if this.children}}
+                                    <ul class="subitems">
+                                        {{#each this.children}}
+                                            <li>
+                                                <a class="subitem {{this.class}}" href="{{this.link}}"
+                                                    title="{{this.name}}">
+                                                    <i class="fa fa-{{this.icon}}" aria-hidden="true"></i>
+                                                    <span class="link-name">{{this.name}}</span>
+                                                </a>
+                                            </li>
+                                        {{/each}}
+                                    </ul>
+                                {{/if}}
+                            {{/if}}
+
+                        </li>
+                    {{/each}}
+                </ul>
+            </nav>
         </aside>
 
         <section class="content-wrapper">
