--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -35,8 +35,7 @@
                     </li>
                     {{#each sidebarItems}}
                         <li data-step={{this.introNumber}} data-intro="{{this.introText}}">
-                            <a class="{{this.class}}" href="{{this.link}}"
-                                    title="{{this.name}}">
+                            <a class="{{this.class}}" href="{{this.link}}" title="{{this.name}}">
                                 <i class="fa fa-{{this.icon}}" aria-hidden="true"></i>
                                 <span class="link-name">{{this.name}}</span>
                             </a>
