--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -12,99 +12,98 @@
 
         {{> "help/search" class="md-2"}}
 
-        {{#embed "help/component-card" title="Inhaltsverzeichnis" icon="fa-list" class="list-of-content-card hidden-sm-up"}}
-            {{#content "card-body"}}
-            <ul>
-                <li><a href="#Erste_Schritte">Erste Schritte</a></li>
-                <li><a href="#Nutzungshilfen">Nutzungshilfen</a></li>
-                {{#each tutorials}}
-                    <li><a href="#{{this.title}}">{{this.title}}</a></li>
-                {{/each}}
-                <li><a href="#Kontakt">Kontaktformular</a></li>
-                <li><a href="#E-Mail">Schreib uns eine E-Mail</a></li>
-                <li><a href="#About">Über das Projekt</a></li>
-            </ul>
-            {{/content}}
-        {{/embed}}
-
-        {{#if false}}
-        {{#embed "help/component-card" title="Erste Schritte" icon="fa-child" class="first-steps-card" id="Erste_Schritte"}}
-            {{#content "card-body"}}
-                {{> "help/icon-link-group" links=firstStepsItems link-class="col-sm-3"}}
-            {{/content}}
-        {{/embed}}
-        {{/if}}
-
-        <div class="row-wrapper">
-            {{#each tutorials}}
-                {{#embed "help/component-card" title=this.title icon=this.icon class="accordion" id=this.title}}
+        <div class="container">
+            <div class="row">
+                {{#embed "help/component-card" title="Inhaltsverzeichnis" icon="fa-list" class="list-of-content-card hidden-sm-up col-xs-12"}}
                     {{#content "card-body"}}
-                        {{#each this.categories}}
-                            {{#if this.articles}}
-                                <div class="card">
-                                    <div class="card-header collapsed" data-toggle="collapse" data-target="#{{this.id}}">
-                                        <i class="fa fa-fw fa-chevron-right bullet-icon" aria-hidden="true" data-expand></i>
-                                        <i class="fa fa-fw fa-chevron-down bullet-icon" aria-hidden="true" data-collapse></i>
-                                        <h5 class="mb-0">
-                                            {{this.title}}
-                                        </h5>
-                                    </div>
-                                    <div id="{{this.id}}" class="collapse">
-                                        <div class="card-body">
-                                            <ul>
-                                                {{#each this.articles}}
-                                                    <li><a href="/help/confluence/{{this.id}}">
-                                                        {{this.title}}
-                                                    </a></li>
-                                                {{/each}}
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            {{else}}
-                            <div class="card">
-                                <a href="/help/confluence/{{this.id}}">
+                    <ul>
+                        <li><a href="#Erste_Schritte">Erste Schritte</a></li>
+                        <li><a href="#Nutzungshilfen">Nutzungshilfen</a></li>
+                        {{#each tutorials}}
+                            <li><a href="#{{this.title}}">{{this.title}}</a></li>
+                        {{/each}}
+                        <li><a href="#Kontakt">Kontaktformular</a></li>
+                        <li><a href="#E-Mail">Schreib uns eine E-Mail</a></li>
+                        <li><a href="#About">Über das Projekt</a></li>
+                    </ul>
+                    {{/content}}
+                {{/embed}}
+
+                {{#if false}}
+                {{#embed "help/component-card" title="Erste Schritte" icon="fa-child" class="first-steps-card col-xs-12" id="Erste_Schritte"}}
+                    {{#content "card-body"}}
+                        {{> "help/icon-link-group" links=firstStepsItems link-class="col-sm-3"}}
+                    {{/content}}
+                {{/embed}}
+                {{/if}}
+
+                {{#each tutorials}}
+                    {{#embed "help/component-card" title=this.title icon=this.icon class="accordion col-md-6" id=this.title}}
+                        {{#content "card-body"}}
+                            {{#each this.categories}}
+                                {{#if this.articles}}
                                     <div class="card">
-                                        <div class="card-header single">
+                                        <div class="card-header collapsed" data-toggle="collapse" data-target="#{{this.id}}">
+                                            <i class="fa fa-fw fa-chevron-right bullet-icon" aria-hidden="true" data-expand></i>
+                                            <i class="fa fa-fw fa-chevron-down bullet-icon" aria-hidden="true" data-collapse></i>
                                             <h5 class="mb-0">
                                                 {{this.title}}
                                             </h5>
                                         </div>
+                                        <div id="{{this.id}}" class="collapse">
+                                            <div class="card-body">
+                                                <ul>
+                                                    {{#each this.articles}}
+                                                        <li><a href="/help/confluence/{{this.id}}">
+                                                            {{this.title}}
+                                                        </a></li>
+                                                    {{/each}}
+                                                </ul>
+                                            </div>
+                                        </div>
                                     </div>
-                                </a>
-                            </div>
-                            {{/if}}
-                        {{/each}}
+                                {{else}}
+                                <div class="card">
+                                    <a href="/help/confluence/{{this.id}}">
+                                        <div class="card">
+                                            <div class="card-header single">
+                                                <h5 class="mb-0">
+                                                    {{this.title}}
+                                                </h5>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                {{/if}}
+                            {{/each}}
+                        {{/content}}
+                    {{/embed}}
+                {{/each}}
+
+                {{#embed "help/component-card" title="Nutzungshilfen" icon="fa-map-signs" class="quickHelp-card col-xs-12" id="Nutzungshilfen"}}
+                    {{#content "card-body"}}
+                        {{> "help/icon-link-group" links=quickHelpItems link-class="col-sm-4"}}
                     {{/content}}
                 {{/embed}}
-            {{/each}}
+                
+                {{#embed "help/component-card" title="Kontaktformular" icon="fa-pencil" class="contact-card col-md-6" id="Kontakt"}}
+                    {{#content "card-body"}}
+                        {{> "help/contact"}}
+                    {{/content}}
+                {{/embed}}
+
+                {{#embed "help/component-card" title="Schreib uns eine E-Mail" icon="fa-envelope" class="eMail-card col-md-6" id="E-Mail"}}
+                    {{#content "card-body"}}
+                        {{> "help/mail-card"}}
+                    {{/content}}
+                {{/embed}}
+            
+                {{#embed "help/component-card" title="Über das Projekt" icon="fa-lightbulb-o" class="information-card col-xs-12" id="About"}}
+                    {{#content "card-body"}}
+                        {{> "help/icon-link-group" links=knowledgeItems link-class="col-sm-4"}}
+                    {{/content}}
+                {{/embed}}
+            </div>
         </div>
-
-        {{#embed "help/component-card" title="Nutzungshilfen" icon="fa-map-signs" class="quickHelp-card" id="Nutzungshilfen"}}
-            {{#content "card-body"}}
-                {{> "help/icon-link-group" links=quickHelpItems link-class="col-sm-4"}}
-            {{/content}}
-        {{/embed}}
-
-        <div class="row-wrapper">
-            {{#embed "help/component-card" title="Kontaktformular" icon="fa-pencil" class="contact-card" id="Kontakt"}}
-                {{#content "card-body"}}
-                    {{> "help/contact"}}
-                {{/content}}
-            {{/embed}}
-
-            {{#embed "help/component-card" title="Schreib uns eine E-Mail" icon="fa-envelope" class="eMail-card" id="E-Mail"}}
-                {{#content "card-body"}}
-                    {{> "help/mail-card"}}
-                {{/content}}
-            {{/embed}}
-        </div>
-
-        {{#embed "help/component-card" title="Über das Projekt" icon="fa-lightbulb-o" class="information-card" id="About"}}
-            {{#content "card-body"}}
-                {{> "help/icon-link-group" links=knowledgeItems link-class="col-sm-4"}}
-            {{/content}}
-        {{/embed}}
-
     {{/content}}
 {{/extend}}
