--- a/views/help/component-card.hbs
+++ b/views/help/component-card.hbs
@@ -1,12 +1,12 @@
-<div class="help-card {{class}}" id="{{id}}">
+<div class="icon-card {{class}}" id="{{id}}">
     {{#if icon}}
-        <div class="icon-wrapper">
+        <div class="icon-card__wrapper">
             <i class="fa fa-fw {{icon}}" aria-hidden="true"></i>
         </div>
     {{/if}}
-    <div class="card-content">
-        <h4 class="card-title">{{title}}</h4>
-        <div class="card-body">
+    <div class="icon-card__content">
+        <h4 class="icon-card__title">{{title}}</h4>
+        <div class="icon-card__body">
             {{#block "card-body"}}{{/block}}
         </div>
     </div>
