--- a/static/styles/help/component-card.scss
+++ b/static/styles/help/component-card.scss
@@ -1,42 +1,37 @@
-.help-card{
+.icon-card{
     position: relative;
     margin-top: 3rem;
     margin-bottom: 1rem;
     
-    .icon-wrapper{
+    .icon-card__wrapper{
         display: inline-block;
         position: absolute;
         top: 0;
         left: 50%;
         transform: translate(-50%, -50%);
-        text-align: center;
-        padding: 16px;
+        padding: 12px;
         background: #333;
-        border-radius: 5rem;
+        border-radius: 8px;
         color: #fff;
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
         font-size: 2em;
     }
-    .card-content {
-        background: white;
+    .icon-card__content {
         border-radius: 4px;
         padding: 16px;
         padding-top: 2rem;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
         border: 1px solid $colorLightGrey;
         text-align: center;
 
-        .card-title {
-            text-align: center;
+        .icon-card__title {
             position: relative;
             padding: 5px;
             padding-top: 15px;
         }
-        .card-title:before{
+        .icon-card__title:before{
             content: "";
             position: absolute;
             width: 50%;
-            height: 1px;
             bottom: 0;
             left: 25%;
             border-bottom: 1px solid #333;
