table-of-contents-card ready

--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -14,7 +14,7 @@
 
         <div class="container">
             <div class="row">
-                {{#embed "help/component-card" title="Inhaltsverzeichnis" icon="fa-list" class="list-of-content-card hidden-sm-up col-xs-12"}}
+                {{#embed "help/component-card" title="Inhaltsverzeichnis" icon="fa-list" class="table-of-contents-card hidden-sm-up col-xs-12"}}
                     {{#content "card-body"}}
                     <ul>
                         <li><a href="#Erste_Schritte">Erste Schritte</a></li>
