--- a/static/styles/help/help.scss
+++ b/static/styles/help/help.scss
@@ -18,6 +18,7 @@ label.form-group{
   display: block;
   margin-bottom: 8px;
 }
+
 // Label
 .control-label{
   &.optional::after{
@@ -39,11 +40,11 @@ label.form-group{
     border-color: $primaryColor;
   }
 }
+
 // chosen options
 .chosen-container .chosen-results li{
   text-align: left;
 }
-
 
 // Toggle
 fieldset.switch_wrapper {
@@ -106,12 +107,42 @@ button{
 /********************************************************
  * Cards
  ********************************************************/
+//table-of-contents
+.table-of-contents-card {
+  .icon-card__content {
+    background: $primaryColor;
+    color: #fff;
+
+    .icon-card__title:before {
+      border-bottom-color: #fff;
+    }
+
+    .icon-card__body {
+      text-align: center;
+
+      ul {
+        list-style-type: none;
+        padding-left: 0;
+        margin: 0;
+
+        li {
+          padding: 4px 0;
+
+          a {
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
+}
 
 //Layout
 .accordion .icon-card__content .fa-fw {
   text-align: left;
 }
 
+//card design
 .accordion {
   .card {
     text-align: left;
@@ -190,6 +221,7 @@ button{
     }
   }
 }
+
 .first-steps-card {
   .link-wrapper a {
     color: #fff;
